<?xml version="1.0"?>
<!--
  Copyright (C) 2016 juztamau5
  Software License Agreement (MIT License)

  Permission is hereby granted, free of charge, to any person obtaining a
  copy of this software and associated documentation files (the "Software"),
  to deal in the Software without restriction, including without limitation
  the rights to use, copy, modify, merge, publish, distribute, sublicense,
  and/or sell copies of the Software, and to permit persons to whom
  the Software is furnished to do so, subject to the following conditions:

  The above copyright notice and this permission notice shall be included
  in all copies or substantial portions of the Software.

  THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
  EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
  MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.
  IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR
  ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF
  CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION
  WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
-->
<package>
  <name>deliverator_vision</name>
  <version>0.1.0</version>
  <description>This package contains ROS files for a node with hardware attached.</description>
  <maintainer email="juztamau5@gmail.com">juztamau5</maintainer>
  <author email="juztamau5@gmail.com">juztamau5</author>
  <url type="website">https://github.com/juztamau5/deliverator</url>
  <url type="bugtracker">https://github.com/juztamau5/deliverator/issues</url>
  <url type="repository">https://github.com/juztamau5/deliverator.git</url>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Video depends -->
  <run_depend>gscam</run_depend>
  <run_depend>gstreamer0.10-plugins-good</run_depend> <!-- TODO: Fix gscam depends -->

  <!-- Input depends -->
  <run_depend>joy</run_depend>

</package>
