<?xml version="1.0"?>
<!--
  Copyright (C) 2016-2018 juztamau5
  Software License Agreement (MIT License)

  Permission is hereby granted, free of charge, to any person obtaining a
  copy of this software and associated documentation files (the "Software"),
  to deal in the Software without restriction, including without limitation
  the rights to use, copy, modify, merge, publish, distribute, sublicense,
  and/or sell copies of the Software, and to permit persons to whom
  the Software is furnished to do so, subject to the following conditions:

  The above copyright notice and this permission notice shall be included
  in all copies or substantial portions of the Software.

  THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
  EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
  MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.
  IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR
  ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF
  CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION
  WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
-->
<package>
  <name>deliverator_gazebo</name>
  <version>0.1.0</version>
  <description>deliverator_gazebo is used with Gazebo to simulate the deliverator platform.</description>
  <author email="juztamau5@gmail.com">juztamau5</author>
  <maintainer email="juztamau5@gmail.com">juztamau5</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/juztamau5/deliverator</url>
  <url type="bugtracker">https://github.com/juztamau5/deliverator/issues</url>
  <url type="repository">https://github.com/juztamau5/deliverator.git</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ackermann_msgs</build_depend>
  <build_depend>controller_manager_msgs</build_depend>
  <build_depend>deliverator_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>ackermann_msgs</run_depend>
  <run_depend>deliverator_description</run_depend>
  <run_depend>deliverator_msgs</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>controller_manager_msgs</run_depend>
  <run_depend>effort_controllers</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>

</package>
